<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_top_corner_bg"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/faceImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/left_rigth_margin_score_button"
            android:gravity="center_horizontal"
            app:srcCompat="@drawable/ic_sad"
            />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/msg_player_not_available"
            android:textColor="@color/black"
            android:lineSpacingExtra="5dp"
            android:textSize="@dimen/default_text_size" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imgcardView"
            android:layout_width="@dimen/circle_height"
            android:layout_height="@dimen/circle_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/left_rigth_margin_score_button"
            android:layout_marginBottom="5dp"

            app:cardUseCompatPadding="true">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/imgPlayer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvPlayStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/play_with_computer"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/dark_red"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/or"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/tryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <Button
                android:id="@+id/btnRobot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/left_rigth_margin_score_button"
                android:layout_weight="1"
                android:background="@color/gray1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/play_with_computer1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/light_black"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnTryAgain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/left_rigth_margin_score_button"
                android:layout_weight="1"
                android:background="@color/gray1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/try_again1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/light_black"

                android:visibility="visible" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/gray" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_gravity="center"
        android:background="@drawable/bottom_corner"
        android:gravity="center"
        android:text="@string/exit"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textStyle="bold" />


</RelativeLayout>

